# vlm-spectra

./: .gitignore  CLAUDE.md  LICENSE  MODEL_GUIDE.md  README.md  demo_prefill_web_app.py  main.py  plan.md  pyproject.toml  rewrite_report.md
examples/: activation_patching_heatmap.py  benchmark_hooks_vs_native.py  countbench_logit_lens.py  counting.py  demo.py  quickstart.py  spatial_demo.py
scripts/: run_logit_lens.py
src/vlm_spectra/: __init__.py
src/vlm_spectra/analysis/: __init__.py  logit_lens.py  metadata.py
src/vlm_spectra/core/: __init__.py  activation_cache.py  hook_manager.py  hook_points.py  hooked_vlm.py  patch_hooks.py
src/vlm_spectra/hooks/: __init__.py  base.py  capture_hooks.py  patch_hooks.py
src/vlm_spectra/logit_lens/: __init__.py  create_logit_lens.py
src/vlm_spectra/models/: HookedVLM.py  IMPLEMENTATION_GUIDE.md  ModelAdapter.py  __init__.py  base_adapter.py  model_prompts.py  registry.py  vlm_metadata.py
src/vlm_spectra/models/adapters/: __init__.py  llava.py  qwen25_vl.py  qwen3_vl.py  smolvlm.py
src/vlm_spectra/preprocessing/: __init__.py  base_processor.py  llava_processor.py  prompts.py  qwen_processor.py  smolvlm_processor.py  spatial.py
src/vlm_spectra/preprocessing/utils/: __init__.py  vision_info.py
src/vlm_spectra/utils/: __init__.py  qwen_25_vl_utils.py
src/vlm_spectra/visualization/: __init__.py  logit_lens_html.py  patch_overview.py
src/vlm_spectra/web_app/: README.md  app.py  model_manager.py  qwen_architecture_analysis.md
src/vlm_spectra/web_app/datasets/example/: dataset.json
src/vlm_spectra/web_app/static/css/: style.css
src/vlm_spectra/web_app/static/js/: app.js
src/vlm_spectra/web_app/templates/: index.html
src/vlm_spectrum/: __init__.py
src/vlm_spectrum/models/: HookedVLM.py  __init__.py
src/vlm_spectrum/utils/: __init__.py
tests/: __init__.py  conftest.py  download_models.py  hook_rewrite_plan.md  hookedvlm_test.py  test_activation_patching.py  test_activation_saving.py  test_batched_operations.py  test_batching.py  test_device.py  test_forward_and_generation.py  test_meta_functions.py  test_prefill_functionality.py  test_run_with_cache.py  test_spatial.py
tests/acceptance/: conftest.py  test_cache_correctness.py  test_cache_hooks.py  test_core_contracts.py  test_model_specific.py  test_patch_hooks.py
tests/deprecated/: hookedvlm_test.py  test_batching.py  test_prefill_functionality.py  test_run_with_cache.py
tests/deprecated/unit/: test_activation_cache.py  test_hook_manager.py
tests/helpers/: __init__.py  cache_hook_suites.py  patch_hook_suites.py
tests/integration/: conftest.py  test_cache_hooks.py  test_hook_registration.py  test_patch_hooks.py  test_processor.py
tests/manual/: test_visualizations.py
tests/unit/: test_activation_cache.py  test_hook_names.py  test_mask_hook_wrapper.py  test_registry.py
